--- a/init.org
+++ b/init.org
@@ -1884,7 +1884,7 @@ Variable substitution (not strictly a snippet).
     (delete-region start end)))
 
 
-(define-key global-map (kbd "C-M-s") #'substitute-math-variables)
+(evil-define-key 'normal global-map (kbd "g r s") #'substitute-math-variables)
 #+end_src
 
 Anonymous snippets.
@@ -4649,6 +4649,22 @@ Convenient way to use quick-calc.
 Evaluate expression at limits.
 
 #+begin_src emacs-lisp :tangle yes
+(defun evaluate-math-expression-at-point (substition start end)
+  (interactive
+   (append (list (read-string "Evaluate at (e.g., \"x=1,y=2\"): "))
+           (if (use-region-p)
+               (list (region-beginning) (region-end))
+             (list (line-beginning-position) (line-end-position)))))
+
+  (save-excursion
+    (goto-char end)
+    (insert (let ((contents (buffer-substring start end)))
+              (with-temp-buffer
+                (insert (string-substitute-math-variables contents substition))
+                (clean-quick-calc (point-min) (point-max))
+                (buffer-string))))
+    (delete-region start end)))
+
 (defun evaluate-math-expression-at-limits (var a b start end)
   (interactive
    (append (split-string (read-string "Evaluate at (e.g., \"x,1,2\"): ") ",")
@@ -4668,7 +4684,8 @@ Evaluate expression at limits.
     (delete-region start end)))
 
 
-(define-key global-map (kbd "C-M-S-s") #'evaluate-math-expression-at-limits)
+(evil-define-key 'normal global-map (kbd "g r l") #'evaluate-math-expression-at-limits)
+(evil-define-key 'normal global-map (kbd "g r p") #'evaluate-math-expression-at-point)
 #+end_src
 
 Key bindings.
