Made changes to Org HTML export.

--- a/init.org
+++ b/init.org
@@ -169,6 +169,13 @@ Stop showing sentinel exit messages with =async-shell-command=.
              (substring signal 0 -1)))))
 #+end_src
 
+Set =.emacs.d= directory.
+
+#+begin_src emacs-lisp :tangle yes
+(defvar emacs-configuration-directory (file-name-directory (or load-file-name (buffer-file-name)))
+  "Get directory of emacs configuration.")
+#+end_src
+
 ** Scratch
 
 Remove initial message from scratch buffer.
@@ -653,6 +660,10 @@ Evil leader keybindings.
 
 ;; toggle fullscreen more easily
 (evil-leader/set-key (kbd "RET") #'toggle-frame-fullscreen)
+
+
+;; swap window sides
+(evil-leader/set-key (kbd "y") #'window-swap-states)
 #+end_src
 
 ** Mode line
@@ -5780,14 +5791,18 @@ document.addEventListener('DOMContentLoaded', () => {
 #+end_src
 
 #+begin_src emacs-lisp :tangle yes :noweb no-export
+(defvar org-html-custom-css-path (concat emacs-configuration-directory "org_style.css")
+  "Path to default custom css.")
+
+
 ;; org-mode custom HTML head export
 (defun org-html-export-head-hook (exporter)
-  "Insert custom inline css."
+  "Insert custom inline head."
   (when (eq exporter 'html)
     (let* ((dir (ignore-errors (file-name-directory (buffer-file-name))))
            (path (concat dir "style.css"))
            (homestyle (or (null dir) (null (file-exists-p path))))
-           (final (if homestyle "~/.org_style.css" path)))
+           (final (if homestyle org-html-custom-css-path path)))
       (setq org-html-head-include-default-style nil)
       (setq org-html-head (concat
                            "<style type=\"text/css\">\n"
@@ -5797,14 +5812,39 @@ document.addEventListener('DOMContentLoaded', () => {
                              (buffer-string))
                            "/*]]>*/-->\n"
                            "</style>\n"
-                           "<script>\n"
-                           "
+                           "\n"
+                           "<script>
 <<org-html-export-head-script>>
-"
-                           "</script>")))))
+</script>")))))
 
 
 (add-hook 'org-export-before-processing-hook #'org-html-export-head-hook)
+
+
+(setq-default org-html-mathjax-template
+              "<script type=\"text/x-mathjax-config\">
+    MathJax.Ajax.config.path[\"mhchem\"] = \"https://cdnjs.cloudflare.com/ajax/libs/mathjax-mhchem/3.3.2\";
+    MathJax.Hub.Config({
+        displayAlign: \"%ALIGN\",
+        displayIndent: \"%INDENT\",
+
+        \"HTML-CSS\": { scale: %SCALE,
+                        linebreaks: { automatic: \"%LINEBREAKS\" },
+                        webFont: \"%FONT\"
+                       },
+        SVG: {scale: %SCALE,
+              linebreaks: { automatic: \"%LINEBREAKS\" },
+              font: \"%FONT\"},
+        NativeMML: {scale: %SCALE},
+        TeX: { equationNumbers: {autoNumber: \"%AUTONUMBER\"},
+               MultLineWidth: \"%MULTLINEWIDTH\",
+               TagSide: \"%TAGSIDE\",
+               TagIndent: \"%TAGINDENT\",
+               extensions: [\"[mhchem]/mhchem.js\"]
+             },
+    });
+</script>
+<script src=\"%PATH\"></script>")
 #+end_src
 
 Color quote in org mode and export to HTML (English class).
