--- a/init.org
+++ b/init.org
@@ -204,10 +204,8 @@ Kill all buffers except for scratch.
 (defun kill-all-buffers-except-scratch ()
   "Kill all buffers except for *scratch*."
   (interactive)
-  (mapc #'(lambda (name)
-            (when (not (string-prefix-p "*scratch" name))
-              (kill-buffer name)))
-        (helm-buffer-list))
+  (mapc 'kill-buffer 
+        (delete (get-buffer "*scratch*") (buffer-list)))
   (message "Killed all buffers except *scratch*."))
 #+end_src
 
@@ -618,14 +616,10 @@ Resize window more easily.
 (global-set-key (kbd "C-c h") #'evil-window-set-height)
 #+end_src
 
-Use the =perspective= package.
+Begin crusade against popup windows.
 
 #+begin_src emacs-lisp :tangle yes
-(use-package perspective
-  :config
-  (setq-default persp-suppress-no-prefix-key-warning t)
-
-  (persp-mode))
+(setq-default pop-up-windows nil)
 #+end_src
 
 Evil leader keybindings.
@@ -1005,10 +999,6 @@ If COMMAND is nil, the key-chord is removed."
 (evil-define-key nil evil-normal-state-map ";" 'evil-ex)
 (evil-define-key nil evil-visual-state-map ";" 'evil-ex)
 (evil-define-key 'normal 'dired-mode-map ";" 'evil-ex)
-
-
-;; define a prefix key for perspective
-(define-key evil-normal-state-map (kbd "g p") 'perspective-map)
 #+end_src
 
 #+begin_src emacs-lisp :tangle yes :noweb no-export
@@ -1397,7 +1387,10 @@ Define =evil-leader= bindings.
 
 #+begin_src emacs-lisp :tangle no :noweb-ref helm-leader
 ;; open the minibuffer
-(evil-leader/set-key "k" 'helm-mini)
+(evil-leader/set-key "k" #'(lambda ()
+                             (interactive)
+                             (let ((pop-up-windows t))
+                               (call-interactively #'helm-mini))))
 
 
 ;; open command minibuffer
@@ -1883,6 +1876,23 @@ Matrix-like snippets.
     (add-hook 'yas-after-exit-snippet-hook #'align-yasnippet-matrix)))
 
 
+(defun align-matrix (start end)
+  (interactive "r")
+  (if (not (region-active-p))
+      (save-mark-and-excursion
+        (let ((inhibit-message t))
+          (er/mark-LaTeX-inside-environment))
+        (setq start (point))
+        (setq end (mark))))
+  (setq my/unhiding-current-line nil)
+  (align-regexp start end "\\(\\s-*\\) &" 1 1 t)
+  (setq my/unhiding-current-line t))
+
+
+(evil-define-key 'visual org-mode-map (kbd "g r a") #'align-matrix)
+(evil-define-key 'normal org-mode-map (kbd "g r a") #'align-matrix)
+
+
 (defun align-yasnippet-matrix ()
   (align-regexp yas-snippet-beg yas-snippet-end "\\(\\s-*\\) &" 1 1 t)
   (setq my/unhiding-current-line t)
@@ -1953,12 +1963,13 @@ Automatic fraction snippets.
                        (texmathp)
                        (> (point) (line-beginning-position))
                        (not (equal (char-after) ? ))
+                       (not (equal (char-after) ?-))
                        (not (and (memq (char-after) '(?{ ?\()) (equal found-brace 0))))
                  (pcase (char-after)
                    ((or ?} ?\)) (setq found-brace (1+ found-brace)))
                    ((or ?{ ?\() (setq found-brace (1- found-brace))))
                  (goto-char (1- (point))))
-               (when (re-search-forward "\\(?:^\\(?1:.+\\)/\\)\\|\\(?:[ {(]\\(?1:.+\\)/\\)" limit t)
+               (when (re-search-forward "\\(?:^\\(?1:.+\\)/\\)\\|\\(?:[ -{(]\\(?1:.+\\)/\\)" limit t)
                  (setq match (match-string 1))
                  (setq match-start (match-beginning 1))))
 
@@ -2101,6 +2112,8 @@ Enable AAS.
                (insert-matrix-like "amatrix" 4 5 "{4}"))
       "matr" (lambda (rows cols) (interactive "nRows: \nnColumns: ")
                (insert-matrix-like "bmatrix" rows cols))
+      "cmat" (lambda (rows) (interactive "nRows: ")
+               (insert-matrix-like "bmatrix" rows 1))
       "amatr" (lambda (rows cols sep)
                 (interactive "nRows: \nnColumns: \nnSeparate at: ")
                 (insert-matrix-like "aamatrix" rows cols
@@ -2218,8 +2231,10 @@ Enable AAS.
                       (">>" . " \\> $0")
                       ("nqu" . " \\neq $0")
                       ("vm" . " - $0")
+                      ("vj" . "-$0")
                       ("vp" . " + $0")
                       ("seq" . " &= $0")
+                      ("sim" . "&\\sim $0")
                       ("amp" . " & $0")
                       ("gtn" . " > $0")
                       ("sgt" . " &> $0")
@@ -2271,6 +2286,7 @@ Automatically correct words when pressing space bar.
   (if (and
        autocorrect-words-on-type
        (memq major-mode '(org-mode mail-mode text-mode))
+       (null (get-char-property (point) 'face))
        (not (texmathp))
        (not (yas-active-snippets))
        (not (equal (TeX-current-macro) "text"))
@@ -3907,10 +3923,40 @@ Add =evil-embrace= pairs to org mode and add text objects.
                              (embrace-add-pair ?u "_" "_")))
 
 
-
 (use-package evil-tex
   :config
-  (add-hook 'org-mode-hook #'evil-tex-mode))
+  (add-hook 'org-mode-hook #'evil-tex-mode)
+
+  (setq-default evil-tex-surround-delimiters
+                `((?m "\\( " . " \\)")
+                  (?M "\\[ " . " \\]")
+                  (?c . ,#'evil-tex-surround-command-prompt)
+                  (?e . ,#'evil-tex-surround-env-prompt)
+                  (?d . ,#'evil-tex-surround-delim-prompt)
+                  (?\; . ,#'evil-tex-surround-cdlatex-accents-prompt)
+                  (?q "`" . "'")
+                  (?Q "``" . "''")
+                  (?^ "^{" . "}")
+                  (?_ "_{" . "}")
+                  (?T "&" . "&")))
+
+  (setq-default evil-tex-delim-map
+                (let ((keymap (make-sparse-keymap)))
+                  (evil-tex-bind-to-delim-map
+                   '(("P"  "(" . ")")
+                     ("p"  "\\left( " . " \\right)")
+                     ("S"  "[" . "]")
+                     ("s"  "\\left[ " . " \\right]")
+                     ("C"  "\\{ " . " \\}")
+                     ("c"  "\\left\\{ " . " \\right\\}")
+                     ("R"  "\\langle " . " \\rangle")
+                     ("r"  "\\left\\langle " . " \\right\\rangle")
+                     ("v" "\\left\\lvert " . " \\right\\rvert")
+                     ("V" "\\lvert " . " \\rvert")
+                     ("n" "\\left\\lVert " . " \\right\\rVert") ; (n for norm)
+                     ("N" "\\lVert " . " \\rVert"))
+                   keymap)
+                  keymap)))
 #+end_src
 
 Display entities in current line (thanks [[https://www.reddit.com/r/emacs/comments/i9pfld/disable_orgprettyentities_on_the_current_line/][Reddit]]).
@@ -4978,7 +5024,10 @@ Convenient way to use quick-calc.
              (expression (replace-regexp-in-string
                           "\\([abcxyz]\\|_[[:digit:]]\\)[[:space:]]*("
                           "\\1*("
-                          (buffer-substring expression-start end))))
+                          (replace-regexp-in-string
+                           "\\\\left\\|\\\\right"
+                           ""
+                           (buffer-substring expression-start end)))))
         (delete-region start (if (and (equal (evil-visual-type) 'line)
                                       (not (equal end (point-max))))
                                  (- end 1) end))
@@ -4986,6 +5035,12 @@ Convenient way to use quick-calc.
           (goto-char start)
           (insert prefix)
           (insert (calc-eval expression)))))))
+#+end_src
+
+Calc styling.
+
+#+begin_src emacs-lisp :tangle yes
+(setq-default calc-highlight-selections-with-faces t)
 #+end_src
 
 Evaluate expression at limits.
@@ -5030,11 +5085,65 @@ Evaluate expression at limits.
 (evil-define-key 'normal global-map (kbd "g r p") #'evaluate-math-expression-at-point)
 #+end_src
 
+Use square brackets for matrices.
+
+#+begin_src emacs-lisp :tangle yes
+(put 'latex 'math-matrix-formatter
+     (lambda (a)
+       (if (and (integerp calc-language-option)
+                (or (= calc-language-option 0)
+                    (> calc-language-option 1)
+                    (< calc-language-option -1)))
+           (append '(vleft 0 "\\begin{bmatrix}")
+                   (math-compose-tex-matrix (cdr a) t)
+                   '("\\end{bmatrix}"))
+         (append '(horiz "\\begin{bmatrix} ")
+                 (math-compose-tex-matrix (cdr a) t)
+                 '(" \\end{bmatrix}")))))
+#+end_src
+
+Copy calc results as kill. [[https://emacs.stackexchange.com/a/48362][Thanks, Akinori!]]
+
+#+begin_src emacs-lisp :tangle yes
+(defun calc-copy-as-kill ()
+    "Copy the top of stack as kill."
+    (interactive)
+    (let ((buffer (generate-new-buffer "*copy-here*")))
+      (unwind-protect
+          (progn
+            (cl-letf
+                (((symbol-function 'calc-find-writable-buffer)
+                  (lambda (buf mode) buffer)))
+              (call-interactively 'calc-copy-to-buffer))
+            (with-current-buffer buffer
+              (kill-new (buffer-substring-no-properties (point-min) (point-max))))
+            (message "Copied the result: %s" (car kill-ring)))
+        (and (buffer-name buffer)
+             (kill-buffer buffer)))))
+#+end_src
+
 Key bindings.
 
 #+begin_src emacs-lisp :tangle yes
 (define-key global-map (kbd "C-'") #'clean-quick-calc)
 (define-key org-mode-map (kbd "C-'") #'clean-quick-calc)
+
+(define-key global-map (kbd "C-M-'") #'calc)
+(define-key org-mode-map (kbd "C-M-'") #'calc)
+
+(define-key global-map (kbd "C-M-;") #'calc-embedded)
+(define-key org-mode-map (kbd "C-M-;") #'calc-embedded)
+
+(add-hook 'calc-mode-hook
+          #'(lambda ()
+              (evil-local-set-key 'normal (kbd "q") #'(lambda ()
+                                                        (interactive)
+                                                        (calc-quit)))))
+(evil-define-key 'normal calc-mode-map (kbd "q") #'calc-quit)
+
+(evil-define-key 'normal calc-mode-map (kbd "r r") #'calc-reset)
+
+(define-key calc-mode-map (kbd "C-c C-y") #'calc-copy-as-kill)
 #+end_src
 
 Hooks.
