Various improvements to Calc.

--- a/init.org
+++ b/init.org
@@ -1394,11 +1394,14 @@ Define =evil-leader= bindings.
 
 
 ;; open command minibuffer
-(evil-leader/set-key ";" 'helm-M-x)
+(evil-leader/set-key ";" #'(lambda ()
+                             (interactive)
+                             (let ((pop-up-windows t))
+                               (call-interactively #'helm-M-x))))
 
 
 ;; for helm-ag
-(evil-leader/set-key "g" 'helm-ag)
+(evil-leader/set-key "g" #'helm-ag)
 #+end_src
 
 Customize helm appearance.
@@ -5009,7 +5012,8 @@ Convenient way to use quick-calc.
 
   (if (null start)
       (with-temp-buffer
-        (quick-calc t)
+        (let ((calc-latex-language t))
+          (quick-calc t))
         (kill-ring-save (point-min) (point-max)))
     (progn
       (let* ((expression-start start)
@@ -5035,6 +5039,59 @@ Convenient way to use quick-calc.
           (goto-char start)
           (insert prefix)
           (insert (calc-eval expression)))))))
+#+end_src
+
+Add special constants to "s k".
+
+#+begin_src emacs-lisp :tangle yes
+(defvar calc-special-constants '(("")
+                                 ("e" . (special-const (math-e)))
+                                 ("pi" . (special-const (math-pi)))
+                                 ("i" . (special-const (math-imaginary 1)))
+                                 ("phi" . (special-const (math-phi)))
+                                 ("gamma" . (special-const (math-gamma-const)))))
+
+
+(defun calc-copy-special-constant (&optional sconst var)
+  (interactive)
+  (let ((sc calc-special-constants))
+    (calc-wrapper
+     (or sconst (setq sconst (completing-read "Special constant: " sc nil t)))
+     (unless (string= sconst "")
+       (let ((value (cdr (assoc sconst sc))))
+         (or var (setq var (calc-read-var-name
+                            (format "Copy special constant %s, to: "
+                                    sconst))))
+         (if var
+             (let ((msg (calc-store-value var value "")))
+               (message "Special constant \"%s\" copied to \"%s\"%s"
+                        sconst (calc-var-name var) msg))))))))
+#+end_src
+
+Convenient way to define new constants.
+
+#+begin_src emacs-lisp :tangle yes
+(defun calc-define-constant (name variable key)
+  "Define a constant for Calc from a predefined variable."
+  (add-to-list 'calc-special-constants `(,name . (special-const ,variable)))
+
+  (let ((name name)
+        (variable variable))
+    (evil-define-key 'normal calc-mode-map (kbd key)
+      `(lambda ()
+          (interactive)
+          (calc-slow-wrapper
+           (if calc-symbolic-mode
+               (calc-pop-push-record 0 ,name '(var ,(intern name) ,variable))
+             (calc-pop-push-record 0 ,name (symbol-value ,variable))))))))
+#+end_src
+
+Add constants.
+
+#+begin_src emacs-lisp :tangle yes
+(defvar var-G `(special-const (math-read-expr "6.6743e-11 m^3/kg/s^2"))
+  "The gravitational constant.")
+(calc-define-constant "G" 'var-G "c k G")
 #+end_src
 
 Calc styling.
@@ -5105,7 +5162,7 @@ Use square brackets for matrices.
 Copy calc results as kill. [[https://emacs.stackexchange.com/a/48362][Thanks, Akinori!]]
 
 #+begin_src emacs-lisp :tangle yes
-(defun calc-copy-as-kill ()
+(defun calc-copy-as-kill-clean ()
     "Copy the top of stack as kill."
     (interactive)
     (let ((buffer (generate-new-buffer "*copy-here*")))
@@ -5143,17 +5200,18 @@ Key bindings.
 
 (evil-define-key 'normal calc-mode-map (kbd "r r") #'calc-reset)
 
-(define-key calc-mode-map (kbd "C-c C-y") #'calc-copy-as-kill)
+(define-key calc-mode-map (kbd "C-c C-y") #'calc-copy-as-kill-clean)
 #+end_src
 
 Hooks.
 
 #+begin_src emacs-lisp :tangle yes
 (add-hook 'calc-mode-hook #'(lambda ()
-                              (calc-latex-language nil)
                               (calc-symbolic-mode 1)
                               (calc-frac-mode 1)
-                              (calc-radians-mode)))
+                              (calc-radians-mode)
+
+                              (setq-default calc-gnuplot-default-device "qt")))
 #+end_src
 
 ** External applications
